# dainty

./: .gitignore  .ignore  .mcp.json  AGENTS.md  CLAUDE.md  Cargo.toml  Cargo.toml.liquid  Dockerfile  LICENSE  README.md  README.md.liquid  TEMPLATE.md  biome.json  build.rs  cargo-generate.toml  compose.yml  hk.pkl  mise.toml  package.json  package.json.liquid  playwright.config.ts  playwright.config.ts.liquid  post-setup.rhai  sqlc.json  tsconfig.json
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
.mise/tasks/: clean  dev
.mise/tasks/generate/: sql
.mise/tasks/test/: _default  e2e  rust
assets/js/: global.d.ts  main.ts
migrations/: 20251115192844_create_layout_state.down.sql  20251115192844_create_layout_state.up.sql
queries/: layout_state.sql
src/: app.rs  assets.rs  config.rs  error.rs  lib.rs  logging.rs  main.rs  server.rs  tokio_postgres_sessions.rs
src/pgdb/: mod.rs  queries.rs
src/routes/: components.rs  mod.rs  pages.rs
tests/: api.spec.ts  global-setup.ts  layout.spec.ts  persistence.spec.ts
