[package]
name = "dainty"
version = "0.1.0"
edition = "2024"

[dependencies]
async-compression = { version = "0.4.33", features = ["tokio", "brotli"] }
async-trait = "0.1.89"
axum = { version = "0.8.7", features = ["macros", "multipart", "ws", "http2"] }
axum-extra = { version = "0.12.2", features = ["async-read-body", "attachment"] }
axum-helmet = "0.2.0"
axum-htmx = { version = "0.8.1", features = ["auto-vary", "futures", "serde"] }
axum-login = "0.18.0"
axum-otel-metrics = "0.12.0"
axum-server = { version = "0.7.3", features = ["tls-rustls"] }
axum-tracing-opentelemetry = "0.32.2"
bootstrap = { version = "0.1.7", registry = "forgejo" }
bytes = "1.11.0"
clap = { version = "4.5.51", features = ["derive", "unicode", "env", "string"] }
confique = { version = "0.4.0", features = ["json5", "toml", "yaml"] }
deadpool-postgres = { version = "0.14.1", features = ["serde"] }
eyre = "0.6.12"
futures = "0.3.31"
http = "1.3.1"
hypertext = { version = "0.12.1", features = ["alpine", "htmx", "axum"] }
jiff = { version = "0.2.16", features = ["js", "serde", "logging"] }
listenfd = "1.0.2"
maud = "0.27.0"
mime_guess = "2.0.5"
notify = "8.2.0"
rmp-serde = "1.3.0"
rustls = { version = "0.23.35", features = ["aws-lc-rs", "brotli"] }
rustls-acme = "0.14.1"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha3 = "0.10"
thiserror = "2.0.17"
time = "0.3.44"
tokio = { version = "1.48.0", features = ["parking_lot", "rt", "rt-multi-thread", "signal", "tracing"] }
tokio-postgres = { version = "0.7.15", features = ["with-jiff-0_2", "with-serde_json-1", "with-uuid-1", "js", "array-impls"] }
tokio-util = { version = "0.7.17", features = ["tracing"] }
tower = { version = "0.5.2", features = ["tracing"] }
tower-http = { version = "0.6.6", features = ["async-compression", "compression-full"] }
tower-layer = "0.3.3"
tower-livereload = "0.9.6"
tower-sessions = "0.14.0"
tower-sessions-core = { version = "0.14.0", features = ["axum-core", "deletion-task"] }
tracing = { version = "0.1.41", features = ["async-await", "log", "valuable"] }
uuid = { version = "1.18.1", features = ["fast-rng", "js", "serde", "v7", "zerocopy"] }
walkdir = "2.5.0"
